Adicionar estrutura inicial

--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Gotu&display=swap" rel="stylesheet">
     <title>Baron Slayers</title>
 </head>
 <body>
-    
+    <header>
+        <div id="Title">
+            <h1>Baron Slayers</h1>
+        </div>
+        <div class="link-externo">
+            <a href="https://gamejolt.com/games/BaronSlayersofficial/481846"><img src="img/game-jolt-logo.png" alt="Página do Gamejolt"></a>
+            <a href="https://github.com/Lithwing"><img src="img/github-light-logo.png" alt="Página no GitHub"></a>
+        </div>
+</header>
+<img id="logo" src="img/Logo.jpg" alt="Logo temporária">
 </body>
 </html>
