Adicionar o texto 'sobre'

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Gotu&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet">
     <title>Baron Slayers</title>
 </head>
 <body>
@@ -18,6 +19,18 @@
             <a href="https://github.com/Lithwing"><img src="img/github-light-logo.png" alt="Página no GitHub"></a>
         </div>
 </header>
-<img id="logo" src="img/Logo.jpg" alt="Logo temporária">
+<div id="Sobre">
+    <div id="sobre-img">
+    <img id="logo" src="img/Logo.jpg" alt="Logo temporária">
+    </div>
+    <div id="sobre-text">
+        <p>
+            Jogo com estilo baseado em Undertale, porém diferente de jogos feitos por fãs, Baron Slayers terá novo enredo, novos personagens, estilo original de combate, música e arte originais.
+        </p>
+        <p>
+        Atualmente a equipe toda está focada no projeto e esperamos dar a vocês um jogo totalmente original! Este é um site de apresentação do projeto, para acompanhar o nosso desenvolvimento acompanhe o nosso Game Jolt!.</p>
+        </p>
+    </div>
+</div>
 </body>
 </html>
