--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div id="Title">
-            <h1>Baron Slayers</h1>
+            <strong><h1>Baron Slayers</h1></strong>
         </div>
         <div class="link-externo">
             <a href="https://gamejolt.com/games/BaronSlayersofficial/481846"><img src="img/game-jolt-logo.png" alt="Página do Gamejolt"></a>
@@ -39,10 +39,12 @@
         <h3>Direção</h3>
         <hr class="divisoria">
         <div class="Team">
-            <img class="team-pic" src="img/Logo.jpg" alt="João Vitor Antunes">
-            <div class="team-name">
-                <h4>João Vitor Antunes</h4>
-                <label for="">Direção Geral</label>
+            <div>
+                <img class="team-pic" src="img/Fotos da equipe/João Vitor Antunes Nascimento.jpeg" alt="João Vitor Antunes Nascimento">
+                <div class="team-name">
+                    <h4>João Vitor Antunes Nascimento</h4>
+                    <label for="">Direção Geral</label>
+                </div>
             </div>
        </div>
    </div>
@@ -50,69 +52,87 @@
     <h3>Roteiro</h3>
     <hr class="divisoria">
     <div class="Team">
-        <img class="team-pic" src="img/Logo.jpg" alt="João">
-        <div class="team-name">
-            <h4>João</h4>
-            <label for="">Roteiro</label>
+        <div>
+            <img class="team-pic" src="img/Logo.jpg" alt="João Pedro Rebello Gonçalves">
+            <div class="team-name">
+                <h4>João Pedro Rebello Gonçalves</h4>
+                <label for="">Roteiro</label>
+            </div>
         </div>
-   </div>
+    </div>
 </div>
     <div>
          <h3>Programação</h3>
          <hr class="divisoria">
          <div class="Team">
+        <div>
             <a href="http://matheusalefe.github.io/"><img class="team-pic" src="img/Fotos da equipe/Matheus Alefe.jpg" alt="Matheus Alefe"></a>
             <div class="team-name">
-                <h4>Matheus Alefe M. Zanardi</h4>
+                <h4>Matheus Alefe Munari Zanardi</h4>
                 <label for="">Programação do jogo e site</label>
             </div>
-           <img class="team-pic" src="img/Logo.jpg" alt="João Vitor Antunes">
+        </div>
+        <div>
+           <img class="team-pic" src="img/Fotos da equipe/João Vitor Antunes Nascimento.jpeg" alt="João Vitor Antunes Nascimento">
             <div class="team-name">
-                <h4>João Vitor Antunes</h4>
+                <h4>João Vitor Antunes Nascimento</h4>
                 <label for="">Programação do jogo</label>
             </div>
         </div>
     </div>
+</div>
     <div>
         <h3>Arte</h3>
         <hr class="divisoria">
         <div class="Team">
+            <div>
            <img class="team-pic" src="img/Fotos da equipe/Isabelle Souza Oliveira.jpeg" alt="Isabelle Souza Oliveira">
            <div class="team-name">
                <h4>Isabelle Souza Oliveira</h4>
                <label for="">Cenários e Sprites</label>
            </div>
+        </div>
+        <div>
            <img class="team-pic" src="img/Logo.jpg" alt="Clara de Oliveira Soares">
             <div class="team-name">
                 <h4>Clara de Oliveira Soares</h4>
                 <label for="">Cenários e Sprites</label>
             </div>
+        </div>
+        <div>
             <img class="team-pic" src="img/Logo.jpg" alt="Giovanna">
             <div class="team-name">
-                <h4>Giovanna</h4>
+                <h4>Giovanna Beatriz Barbosa</h4>
                 <label for="">Cenários e Sprites</label>
             </div>
+        </div>
+        <div>
             <img class="team-pic" src="img/Logo.jpg" alt="Olívia">
             <div class="team-name">
                 <h4>Olívia</h4>
                 <label for="">Cenários e Sprites</label>
             </div>
+        </div>
        </div>
    </div>
    <div>
     <h3>Música</h3>
     <hr class="divisoria">
     <div class="Team">
-       <img class="team-pic" src="img/Fotos da equipe/Gabriel Maester.jpg" alt="Gabriel Maester Carvalho">
-       <div class="team-name">
-           <h4>Gabriel Maester Carvalho</h4>
-           <label for="">Trilha e Efeitos sonoros</label>
-       </div>
+        <div>
+            <img class="team-pic" src="img/Fotos da equipe/Gabriel Maester.jpg" alt="Gabriel Maester Carvalho">
+            <div class="team-name">
+                <h4>Gabriel Maester Carvalho</h4>
+                <label for="">Trilha e Efeitos sonoros</label>
+            </div>
+        </div>
+    <div>
        <img class="team-pic" src="img/Logo.jpg" alt="Eduardo Carlos">
             <div class="team-name">
                 <h4>Eduardo Carlos</h4>
                 <label for="">Trilha e Efeitos Sonoros</label>
             </div>
+    </div>
    </div>
 </div>
 </section>
