Atualizar os membros

--- a/index.html
+++ b/index.html
@@ -53,9 +53,16 @@
     <hr class="divisoria">
     <div class="Team">
         <div>
-            <img class="team-pic" src="img/Logo.jpg" alt="João Pedro Rebello Gonçalves">
+            <img class="team-pic" src="img/Fotos da equipe/João Rabello.png" alt="João Pedro Rebello Gonçalves">
             <div class="team-name">
                 <h4>João Pedro Rebello Gonçalves</h4>
+                <label for="">Roteiro</label>
+            </div>
+        </div>
+        <div>
+            <img class="team-pic" src="img/Fotos da equipe/Ema Fonseca.jpeg" alt="Ema Fonseca">
+            <div class="team-name">
+                <h4>Ema Fonseca</h4>
                 <label for="">Roteiro</label>
             </div>
         </div>
@@ -93,23 +100,23 @@
            </div>
         </div>
         <div>
-           <img class="team-pic" src="img/Logo.jpg" alt="Clara de Oliveira Soares">
+           <img class="team-pic" src="img/Fotos da equipe/Clara de Oliveira Soares.jpeg" alt="Clara de Oliveira Soares">
             <div class="team-name">
                 <h4>Clara de Oliveira Soares</h4>
                 <label for="">Cenários e Sprites</label>
             </div>
         </div>
         <div>
-            <img class="team-pic" src="img/Logo.jpg" alt="Giovanna">
+            <img class="team-pic" src="img/Fotos da equipe/Giovanna Beatriz Barbosa.jpeg" alt="Giovanna Beatriz Barbosa">
             <div class="team-name">
                 <h4>Giovanna Beatriz Barbosa</h4>
                 <label for="">Cenários e Sprites</label>
             </div>
         </div>
         <div>
-            <img class="team-pic" src="img/Logo.jpg" alt="Olívia">
+            <img class="team-pic" src="img/Fotos da equipe/Olívia Santos Rodrigues.jpeg" alt="Olívia Santos Rodrigues">
             <div class="team-name">
-                <h4>Olívia</h4>
+                <h4>Olivia Santos Rodrigues</h4>
                 <label for="">Cenários e Sprites</label>
             </div>
         </div>
@@ -127,9 +134,9 @@
             </div>
         </div>
     <div>
-       <img class="team-pic" src="img/Logo.jpg" alt="Eduardo Carlos">
+       <img class="team-pic" src="img/Fotos da equipe/Eduardo Carlos da Silva.jpg" alt="Eduardo Carlos">
             <div class="team-name">
-                <h4>Eduardo Carlos</h4>
+                <h4>Eduardo Carlos da Silva</h4>
                 <label for="">Trilha e Efeitos Sonoros</label>
             </div>
     </div>
