--- a/index.html
+++ b/index.html
@@ -143,5 +143,15 @@
    </div>
 </div>
 </section>
+<footer>
+    <div>
+        <h4>Contato:</h4>
+        <label for="">baronslayers@outlook.com</label>
+    </div>
+    <div>
+        <p> ©Lithwing Gamemaking Industry, 2020 - All rights reserved
+        </p>
+    </div>
+</footer>
 </body>
 </html>
