--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
         </div>
         
 </header>
-<section id="Sobre">
-    <div id="sobre-img">
-    <img id="logo" src="img/Logo.jpg" alt="Logo temporária">
-    </div>
-    <div id="sobre-text">
-        <p>
-            Jogo com estilo baseado em Undertale, porém diferente de jogos feitos por fãs, Baron Slayers terá novo enredo, novos personagens, estilo original de combate, música e arte originais.
-        </p>
-        <p>
-        Atualmente a equipe toda está focada no projeto e esperamos dar a vocês um jogo totalmente original! Este é um site de apresentação do projeto, para acompanhar o nosso desenvolvimento acompanhe o nosso Game Jolt!.</p>
-        </p>
-    </div>
-</section>
+    <section id="Sobre">
+        <div id="sobre-img">
+        <img id="logo" src="img/Logo.jpg" alt="Logo temporária">
+        </div>
+        <div id="sobre-text">
+            <p>
+                Jogo com estilo baseado em Undertale, porém diferente de jogos feitos por fãs, Baron Slayers terá novo enredo, novos personagens, estilo original de combate, música e arte originais.
+            </p>
+            <p>
+            Atualmente a equipe toda está focada no projeto e esperamos dar a vocês um jogo totalmente original! Este é um site de apresentação do projeto, para acompanhar o nosso desenvolvimento acompanhe o nosso Game Jolt!.</p>
+            </p>
+        </div>
+    </section>
 <section id="Equipe">
     <h2>Equipe</h2>
     <hr>
@@ -73,7 +73,7 @@
             <a href="http://matheusalefe.github.io/"><img class="team-pic" src="img/Fotos da equipe/Matheus Alefe.jpg" alt="Matheus Alefe"></a>
             <div class="team-name">
                 <h4>Matheus Alefe Munari Zanardi</h4>
-                <label for="">Programação do jogo e site</label>
+                <label for="">Programação do site</label>
             </div>
         </div>
         <div>
